2013-07-25  Andrey Borzenkov <arvidjaar@gmail.com>

	* .bzrignore: Remove grub-core/lib/dtc-grub,
	grub-core/Makefile.libfdt.def
	* conf/Makefile.extra-dist: Remove grub-core/Makefile.libfdt.def.

2013-07-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/video.h (grub_video_register): Keep double-linked as
	well as single-linked invariants.
	Reported by: qwertial.

2013-07-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/nativedisk.c (get_uuid): Handle
	GRUB_DISK_DEVICE_UBOOTDISK_ID.

2013-07-25  Vladimir Testov <vladimir.testov@rosalab.ru>

	* grub-core/gfxmenu/widget-box.c: Fixed draw function. Now it takes
	maximum of NW, N, NE heights instead of N's height and maximum of
	NW, W, SW widths instead of W's width. (So the box will be always
	correctly drawn)

2013-07-20  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* grub-core/partmap/bsdlabel.c (netopenbsdlabel_partition_map_iterate):
	Fix misuse of variable count.

2013-07-18  Leif Lindholm  <leif.lindholm@arm.com>
2013-07-18  Francesco Lavra  <francescolavra.fl@gmail.com>
2013-07-18  Vladimir Serbinenko  <phcoder@gmail.com>

	New ports to arm-uboot and arm-efi.
	Mostly by Leif Lindholm with some additions from
	Francesco Lavra and cleanup by Vladimir Serbinenko.

2013-07-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/multiboot_elfxx.c: Check eip after v2p translation
	and not before.
	Reported by: Leon Drugi.

2013-07-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/powerpc/ieee1275/startup.S: Handle unaligned bss.
	Reported by: Paulo Flabiano Smorigo.

2013-07-14  Vladimir Testov <vladimir.testov@rosalab.ru>

	* grub-core/gfxmenu/gui_list.c: USe viewport when drawing strings.

2013-07-14  Vladimir Testov <vladimir.testov@rosalab.ru>

	* grub-core/gfxmenu/gui_list.c: Fix height calculation.

2013-07-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfs.c: Stylistic fixes.

2013-07-14  Vladimir Serbinenko  <phcoder@gmail.com>
